fixing code quality issues